mik-sdk-macros/tests/ui/routes/missing_type_after_colon.rs
use mik_sdk_macros::routes;

fn handler() -> String { String::new() }

// Error: Missing type name after input source
routes! {
    GET "/users/{id}" => handler(path:),
}

fn main() {}
